crazy amount of tweaks